<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.siom79.japicmp</groupId>
    <artifactId>japicmp-base</artifactId>
    <version>0.15.6</version>
    <packaging>pom</packaging>

    <name>japicmp-base</name>
    <description>japicmp is a tool/maven plugin that compares two versions of a jar archive for binary compatibility.</description>
    <url>https://github.com/siom79/japicmp</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>martin.mois</id>
            <name>Martin Mois</name>
            <email>martin.mois@gmail.com</email>
        </developer>
    </developers>
	<contributors>
		<contributor>
			<name>Loki</name>
			<url>https://github.com/eldur</url>
		</contributor>
		<contributor>
			<name>Mario Zechner</name>
			<url>https://github.com/badlogic</url>
		</contributor>
		<contributor>
			<name>Daniel Norberg</name>
			<url>https://github.com/danielnorberg</url>
		</contributor>
		<contributor>
			<name>Mike Duigou</name>
			<url>https://github.com/mike-duigou</url>
		</contributor>
		<contributor>
			<name>Chetan Narsude</name>
			<url>https://github.com/243826</url>
		</contributor>
		<contributor>
			<name>Guy Rooms</name>
			<url>https://github.com/roomsg</url>
		</contributor>
		<contributor>
			<name>Caspar MacRae</name>
			<url>https://github.com/earcam</url>
		</contributor>
		<contributor>
			<name>Robert Metzger</name>
			<url>https://github.com/rmetzger</url>
		</contributor>
		<contributor>
			<name>Francois Lasne</name>
			<url>https://github.com/LasneF</url>
		</contributor>
		<contributor>
			<name>Niklas Therning</name>
			<url>https://github.com/ntherning</url>
		</contributor>
		<contributor>
			<name>Chas Honton</name>
			<url>https://github.com/chonton</url>
			<email>chas@honton.org</email>
		</contributor>
		<contributor>
			<name>Richard Atkins</name>
			<url>https://github.com/rjatkins</url>
		</contributor>
		<contributor>
			<name>Mark Raynsford</name>
			<url>https://github.com/io7m</url>
		</contributor>
		<contributor>
			<name>zhostasa</name>
			<url>https://github.com/zhostasa</url>
			<email>zhostasa@redhat.com</email>
		</contributor>
		<contributor>
			<name>twogee</name>
			<url>https://github.com/twogee</url>
		</contributor>
		<contributor>
			<name>Arnaud Vié</name>
			<url>https://github.com/UnasZole</url>
		</contributor>
		<contributor>
			<name>Buddhi Kulatunga</name>
			<url>https://github.com/bkulatun</url>
		</contributor>
		<contributor>
			<name>Rostislav Svoboda</name>
			<url>https://github.com/rsvoboda</url>
			<email>rsvoboda@redhat.com</email>
		</contributor>
		<contributor>
			<name>Rob Tompkins</name>
			<url>https://github.com/chtompki</url>
			<email>chtompki@gmail.com</email>
		</contributor>
		<contributor>
			<name>Tobias Preuss</name>
			<url>https://github.com/johnjohndoe</url>
		</contributor>
		<contributor>
			<name>Tom Bentley</name>
			<url>https://github.com/tombentley</url>
		</contributor>
		<contributor>
			<name>Richard Hierlmeier</name>
			<url>https://github.com/rhierlmeier</url>
		</contributor>
		<contributor>
			<name>Matt Benson</name>
			<url>https://github.com/mbenson</url>
			<email>gudnabrsam@gmail.com</email>
		</contributor>
		<contributor>
			<name>Stefano Cordio</name>
			<url>https://github.com/scordio</url>
		</contributor>
	</contributors>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <github.account>siom79</github.account>
        <github.project>japicmp</github.project>
        <java.source>1.8</java.source>
        <java.target>1.8</java.target>
		<maven.site.plugin.skip>false</maven.site.plugin.skip>
		<javassist.version>3.24.0-GA</javassist.version>
		<guava.version>30.1-jre</guava.version>
		<jaxb.version>2.2.7</jaxb.version>
		<javax-activation.version>1.1</javax-activation.version>
		<sonatypeOssDistMgmtSnapshotsUrl>https://oss.sonatype.org/content/repositories/snapshots/</sonatypeOssDistMgmtSnapshotsUrl>
    </properties>

    <modules>
        <module>japicmp</module>
        <module>japicmp-testbase</module>
        <module>japicmp-maven-plugin</module>
		<module>japicmp-ant-task</module>
	</modules>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.stefanbirkner</groupId>
            <artifactId>system-rules</artifactId>
            <version>1.12.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>4.3.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.javassist</groupId>
				<artifactId>javassist</artifactId>
				<version>${javassist.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.xml.bind</groupId>
				<artifactId>jaxb-api</artifactId>
				<version>${jaxb.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-core</artifactId>
				<version>${jaxb.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-impl</artifactId>
				<version>${jaxb.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.activation</groupId>
				<artifactId>activation</artifactId>
				<version>${javax-activation.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>${java.source}</source>
                    <target>${java.target}</target>
				</configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <remoteTagging>false</remoteTagging>
                    <suppressCommitBeforeTag>false</suppressCommitBeforeTag>
					<goals>deploy</goals>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                  <quiet>true</quiet>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <!-- explicitly define maven-deploy-plugin after other to force exec order -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
                <executions>
                    <execution>
                        <id>deploy</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>deploy</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.7.1</version>
				<configuration>
					<skip>${maven.site.plugin.skip}</skip>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.doxia</groupId>
						<artifactId>doxia-module-markdown</artifactId>
						<version>1.8</version>
					</dependency>
				</dependencies>
			</plugin>
        </plugins>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-webdav-jackrabbit</artifactId>
                <version>3.0.0</version>
            </extension>
        </extensions>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.22.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.3.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.0.0-M1</version>
					<configuration>
						<autoVersionSubmodules>true</autoVersionSubmodules>
						<useReleaseProfile>false</useReleaseProfile>
						<releaseProfiles>release</releaseProfiles>
						<goals>deploy</goals>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
    </build>

    <scm>
        <connection>scm:git:git@github.com:${github.account}/${github.project}.git</connection>
        <developerConnection>scm:git:git@github.com:${github.account}/${github.project}.git</developerConnection>
        <url>git@github.com:${github.account}/${github.project}.git</url>
      <tag>japicmp-base-0.15.6</tag>
  </scm>

	<distributionManagement>
		<site>
			<id>japicmp</id>
			<url>file://${user.dir}/target/deploy/site</url>
		</site>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>${sonatypeOssDistMgmtSnapshotsUrl}</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-nexus-staging</id>
			<name>Nexus Release Repository</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

    <profiles>
        <profile>
            <id>sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
           <id>doclint-java8-disabled</id>
           <activation>
              <jdk>[1.8,)</jdk>
           </activation>
           <build>
              <plugins>
                 <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
					 <configuration>
						 <source>8</source>
					 </configuration>
                 </plugin>
              </plugins>
           </build>
        </profile>
		<profile>
			<id>java-9</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>
								--illegal-access=warn
							</argLine>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<configuration>
							<argLine>
								--illegal-access=warn
							</argLine>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<additionalJOption>
							</additionalJOption>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>java-17</id>
			<activation>
				<jdk>[17,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<!-- FIXME: remove once https://github.com/jboss-javassist/javassist/issues/400 has been fixed -->
							<!-- FIXME: remove once https://github.com/stefanbirkner/system-rules/issues/85 has been fixed -->
							<argLine>
								--add-opens java.base/java.lang=ALL-UNNAMED
								-Djava.security.manager=allow
							</argLine>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<configuration>
							<argLine>
								--add-opens java.base/java.lang=ALL-UNNAMED
								-Djava.security.manager=allow
							</argLine>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<additionalJOption>
							</additionalJOption>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
    </profiles>

	<repositories>
		<repository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
</project>
